force-app/main/default/objects/Partner_Referral_Code__c/Partner_Referral_Code__c.object-meta.xml
<CustomObject>
    <label>Partner Referral Code</label>
    <nameField>
        <displayFormat>PRC-{00000}</displayFormat>
        <label>Partner Referral Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Referral Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>