force-app/main/default/objects/Partner_Referral_Code__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Referral Codes</relationshipLabel>
    <relationshipName>Partner_Referral_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>