force-app/main/default/objects/Partner_Referral_Code__c/fields/Referral_URL__c.field-meta.xml
<CustomField>
    <fullName>Referral_URL__c</fullName>
    <formula>&quot;ref=&quot; + Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral URL</label>
    <type>Text</type>
</CustomField>